# fitness-tools

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.changeset/: ffmi-rsmi-calculators.md  fix-mcp-workspace-protocol.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
api/: catalog.py  errors.py  main.py
apps/api/: Dockerfile  README.md  package.json
apps/api/scripts/: gen-openapi.ts
apps/api/src/: app.ts  catalog.test.ts  catalog.ts  errors.test.ts  errors.ts  health.test.ts  openapi.test.ts  openapi.ts  registry-contract.test.ts
apps/docs/: .gitignore  astro.config.mjs  package.json
apps/mcp/: CHANGELOG.md  README.md  package.json
apps/mcp/src/: main.ts  server.test.ts  tools.ts
fitness_core/: bodyfat.py  energy.py  macros.py  plates.py  potential.py  stats.py  strength.py  units.py
scripts/: guard-publish.mjs
tests/: test_sanity.py
tests/api/: test_app.py  test_registry_contract.py
tests/core/: test_bodyfat.py  test_energy.py  test_macros.py  test_plates.py  test_stats.py  test_strength.py  test_units.py
tests/tools/: test_activity_multiplier.py  test_body_fat.py  test_dispatch.py  test_macros.py  test_muscle_potential.py  test_one_rep_max.py  test_powerlifting_attempts.py  test_tdee.py
tools/: __init__.py  _dispatch.py  _registry.py  activity_multiplier.py  body_fat.py  macros.py  one_rep_max.py  powerlifting_attempts.py  tdee.py
(+23 files in other folders)
